@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-15T08:11:43Z",
-  "count_outdated" : 981,
-  "uniques_outdated" : 619,
+  "timestamp" : "2023-09-16T00:39:51Z",
+  "count_outdated" : 984,
+  "uniques_outdated" : 621,
   "count" : 1005,
   "uniques" : 637,
   "clones" : [
-    {
-      "timestamp": "2023-09-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-09-02T00:00:00Z",
       "count": 1,
