@@ -1,12 +1,7 @@
 {
-  "count": 22,
+  "count": 21,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-09-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-02T00:00:00Z",
       "count": 1,
